syntax = "proto3";

package tradesvc.v0;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/AnthonyHewins/nalpaca/gen/go/tradesvcsvc/v0;tradesvc";

enum Side {
    SIDE_UNSPECIFIED = 0;
    SIDE_BUY = 1;
    SIDE_SELL = 2;
}

enum OrderType {
    ORDER_TYPE_UNSPECIFIED = 0;
	ORDER_TYPE_MARKET = 1;
	ORDER_TYPE_LIMIT = 2;
	ORDER_TYPE_STOP = 3;
	ORDER_TYPE_STOP_LIMIT = 4;
	ORDER_TYPE_TRAILING_STOP = 5;
}

enum OrderClass {
    ORDER_CLASS_UNSPECIFIED = 0;
	ORDER_CLASS_BRACKET = 1;
	ORDER_CLASS_OTO = 2;
	ORDER_CLASS_OCO = 3;
	ORDER_CLASS_SIMPLE = 4;
}

enum TimeInForce {
	TIME_IN_FORCE_UNSPECIFIED = 0;
	TIME_IN_FORCE_DAY = 1;
	TIME_IN_FORCE_GTC = 2;
	TIME_IN_FORCE_OPG = 3;
	TIME_IN_FORCE_IOC = 4;
	TIME_IN_FORCE_FOK = 5;
	TIME_IN_FORCE_GTX = 6;
	TIME_IN_FORCE_GTD = 7;
	TIME_IN_FORCE_CLS = 8;
}

enum PositionIntent {
	POSITION_INTENT_UNSPECIFIED = 0;
	POSITION_INTENT_BUY_TO_OPEN = 1;
	POSITION_INTENT_BUY_TO_CLOSE = 2;
	POSITION_INTENT_SELL_TO_OPEN = 3;
	POSITION_INTENT_SELL_TO_CLOSE = 4;
}

message TakeProfit {
    string limit_price = 1;
}

message StopLoss {
    string limit = 1;
    string stop = 2;
}

enum AssetClass {
    ASSET_CLASS_UNSPECIFIED = 0;
    ASSET_CLASS_US_EQUITY = 1;
    ASSET_CLASS_CRYPTO = 2;
}

message Order {
	string id = 1;
	string client_order_id = 2;
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
	google.protobuf.Timestamp submitted_at = 5;
 
     // optional
	google.protobuf.Timestamp filled_at       = 6;
	google.protobuf.Timestamp expired_at      = 7;
	google.protobuf.Timestamp canceled_at     = 8;
	google.protobuf.Timestamp failed_at       = 9;
	google.protobuf.Timestamp replaced_at     = 10;

    //optional
	string           replaced_by     = 11;
	string           replaces       = 12;

	string            asset_id        = 13;
	string            symbol         = 14;
	AssetClass        asset_class     = 15;
	OrderClass        order_class     = 16;
	OrderType         type           = 17;
	Side              side           = 18;
	TimeInForce       time_in_force    = 19;
	string            status         = 20;
	string  notional       = 21;
	string  qty            = 22;
	string  filled_qty      = 23;
	string  filled_avg_price = 24;
	string  limit_price     = 25;
	string  stop_price      = 26;
	string  trail_price     = 27;
	string  trail_percent   = 28;
	string  hwm            = 29;
	bool              ext_hours  = 30;
	repeated Order           legs           = 31;
}

message Trade {
    string symbol = 1;

    string qty = 2;
    string notional = 3;

    Side side = 4;
    OrderType order_type = 5;
    TimeInForce tif = 6;
    string limit_price = 7;
    bool extended_hours = 8;
    string stop_price = 9;
    OrderClass class = 11;
    TakeProfit take_profit = 12;
    StopLoss stop_loss = 13;
    string trail_price = 14;
    string trail_percent = 15;
    PositionIntent position_intent = 16;
}

message TradeUpdate {
    google.protobuf.Timestamp at = 1;
    string event = 2;
    string event_id = 3;
    string execution_id = 4;
    Order order = 5;
    string position_qty = 6;
    string price = 7;
    string qty = 8;
    google.protobuf.Timestamp timestamp = 9;
}

// message Account {
// 	string ID = 1;
// 	string AccountNumber = 2;
// 	string Status = 3;
// 	string CryptoStatus = 4;
// 	string Currency = 5;
// 	string BuyingPower = 6;
// 	string RegTBuyingPower = 7;
// 	string DaytradingBuyingPower = 8;
// 	string EffectiveBuyingPower = 9;
// 	string NonMarginBuyingPower = 10;
// 	string BodDtbp = 11;
// 	string Cash = 12;
// 	string AccruedFees = 13;
// 	string PortfolioValue = 14;
// 	bool   PatternDayTrader = 15;
// 	bool   TradingBlocked = 16;
// 	bool   TransfersBlocked = 17;
// 	bool   AccountBlocked = 18;
// 	bool   ShortingEnabled = 19;
// 	bool   TradeSuspendedByUser = 20;
// 	google.protobuf.Timestamp CreatedAt = 21;
// 	string Multiplier = 22;
// 	string Equity = 23;
// 	string LastEquity = 24;
// 	string LongMarketValue = 25;
// 	string ShortMarketValue = 26;
// 	string PositionMarketValue = 27;
// 	string InitialMargin = 28;
// 	string MaintenanceMargin = 29;
// 	string LastMaintenanceMargin = 30;
// 	string SMA = 31;
// 	int64 DaytradeCount = 32;
// 	int32 CryptoTier = 33;
// }

message Position {
	string     asset_id                 = 1;
	string     symbol                   = 2;
	string     exchange                 = 3;
	AssetClass asset_class              = 4;
	bool       asset_marginable         = 5;
	string     qty                      = 6;
	string     qty_available            = 7;
	string     avg_entry_price          = 8;
	string     side                     = 9;
	string     market_value             = 10;
	string     cost_basis               = 11;
	string     unrealized_pl            = 12;
	string     unrealized_plpc          = 13;
	string     unrealized_intraday_pl   = 14;
	string     unrealized_intraday_plpc = 15;
	string     current_price            = 16;
	string     lastday_price            = 17;
	string     change_today             = 18;
}

message Positions {
	repeated Position positions = 1;
}